some style, fix for carts not showing up

--- a/src/mint/react/components/App/App.scss
+++ b/src/mint/react/components/App/App.scss
@@ -36,8 +36,10 @@ body {
   max-width: 900px;
   margin: auto;
   background-color: $kip-primary-color;
-  border-left: 2px solid $header-color;
-  border-right: 2px solid $header-color
+  @media (min-width: 900px) {
+    border-left: 2px solid $header-color;
+    border-right: 2px solid $header-color;
+  }
 }
 
 .app__view {
